--- a/hiera.yaml
+++ b/hiera.yaml
@@ -6,9 +6,13 @@ defaults:
 
 hierarchy:
   - name: "Yaml backend"
-    data_hash: yaml_data
+    data_hash: eyaml_lookup_key
     paths:
-      - "username/%{username}"
-      - "roles/%{role}"
+      - "username/%{username}.yaml"
+      - "roles/%{role}.yaml"
       - "nodes/%{trusted.certname}.yaml"
       - "common.yaml"
+    options:
+      pkcs7_private_key: /etc/puppetlabs/puppet/eyaml/keys/private_key.pkcs7.pem
+      pkcs7_public_key: /etc/puppetlabs/puppet/eyaml/keys/public_key.pkcs7.pem
+
