--- a/hiera.yaml
+++ b/hiera.yaml
@@ -6,7 +6,7 @@ defaults:
 
 hierarchy:
   - name: "Yaml backend"
-    data_hash: eyaml_lookup_key
+    lookup_key: eyaml_lookup_key
     paths:
       - "username/%{username}.yaml"
       - "roles/%{role}.yaml"
